scroll fix on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+canvas {
+    touch-action: none;
+}
+
 body {
     background-color: rgb(238, 238, 238);
 }
